{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "ZombieControls",
            "id": "ee9e5ac4-798d-45f9-957f-997de7255f2a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "61f8d9b1-9360-424e-a248-0cff09dd332a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "54a0e16f-3d11-4410-adc2-3e2986bb598a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b15430b-f4c3-4c88-9179-2e04cbe2640d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcf9c417-067f-41c0-a8bb-e60e5a26b0e8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}